--- a/index.html
+++ b/index.html
@@ -176,16 +176,16 @@
     
     <form name="contact" method="POST" data-netlify="true">
       <p>
-        <label for="name">Name</label>
-        <input type="text" id="name" name="name" />
+        <label for="name">Name
+        <input type="text" id="name" name="name" /></label>
       </p>
       <p>
-        <label for="email">Email</label>
-        <input type="text" id="email" name="email" />
+        <label for="email">Email
+        <input type="text" id="email" name="email" /></label>
       </p>
       <p>
-        <label for="message">Message</label>
-        <textarea id="message" name="message"></textarea>
+        <label for="message">Message
+        <textarea id="message" name="message"></textarea></label>
       </p>
       <p>
         <button type="submit">Send</button>
