--- a/index.html
+++ b/index.html
@@ -172,27 +172,24 @@
         };
         document.body.appendChild(script);
       </script>
-  
-    
-    <form name="contact" method="POST" data-netlify="true">
-      <p>
-        <label for="name">Name
-        <input type="text" id="name" name="name" /></label>
-      </p>
-      <p>
-        <label for="email">Email
-        <input type="text" id="email" name="email" /></label>
-      </p>
-      <p>
-        <label for="message">Message
-        <textarea id="message" name="message"></textarea></label>
-      </p>
-      <p>
-        <button type="submit">Send</button>
-      </p>
-    </form>
 
     <footer>
+
+      <form name="contactor" method="POST" data-netlify="true">
+        <p>
+          <label>Your Name: <input type="text" name="name" /></label>   
+        </p>
+        <p>
+          <label>Your Email: <input type="email" name="email" /></label>
+        </p>
+        <p>
+          <label>Message: <textarea name="message"></textarea></label>
+        </p>
+        <p>
+          <button type="submit">Send</button>
+        </p>
+      </form>
+
     <div class="footer_box" id="contact">
         <div class="socials">
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="Images/Twitter.png" alt="Twitter" width="96" height="96"></a>
