--- a/index.html
+++ b/index.html
@@ -76,9 +76,28 @@
         "I have the heart of a child. I keep it in a jar on my desk." - Stephen King
     </div>
 
+    <h2 class="write">Write Me.</h2>
 
-
+    <div class="form">
+      
+      <form name="contactor" method="POST" data-netlify="true">
+          <p>
+            <p>Name:    </p><input type="text" name="name" />  
+          </p>
+          <p>
+            <p>Mail:    </p><input type="email" name="email" />
+          </p>
+          <p>
+            <p>Message: </p><textarea name="message"></textarea>
+          </p>
+          <p>
+            <button type="submit">Send</button>
+          </p>
+      </form>
+    </div>
+  
     <footer>
+      
     <div class="footer_box" id="contact">
         <div class="socials">
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="Images/Twitter.png" alt="Twitter" width="96" height="96"></a>
@@ -101,21 +120,7 @@
     </div>
     </footer>
 
-   <form name="contactor" method="POST" data-netlify="true">
-        <p>
-          <label>Your Name: <input type="text" name="name" /></label>   
-        </p>
-        <p>
-          <label>Your Email: <input type="email" name="email" /></label>
-        </p>
-        <p>
-          <label>Message: <textarea name="message"></textarea></label>
-        </p>
-        <p>
-          <button type="submit">Send</button>
-        </p>
-    </form>
-
+  
 </body>
 
 </html>
