--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <a href="#unity-container">Projects</a>
+                    <a href="#projects">Projects</a>
                 </div>
 
                 <div class="nav-link-wrapper">
@@ -72,7 +72,7 @@
         
     </div>
 
-    <div class="placeholder">
+    <div class="placeholder" id="projects">
         "I have the heart of a child. I keep it in a jar on my desk." - Stephen King
     </div>
 
