--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <div class="form">
       
-      <form name="contactor" method="POST" data-netlify="true">
+      <form name="contactor" method="POST" data-netlify="true" id="contact">
           <p>
             <p>Name:    </p><input type="text" name="name" />  
           </p>
@@ -98,7 +98,7 @@
   
     <footer>
       
-    <div class="footer_box" id="contact">
+    <div class="footer_box">
         <div class="socials">
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="Images/Twitter.png" alt="Twitter" width="96" height="96"></a>
         </div>
