--- a/index.html
+++ b/index.html
@@ -92,7 +92,24 @@
 
 <!--Projects-->
 
-<div id="projects"></div>
+<div class="projects" id="projects">
+
+    <div class="project1">
+        <div class="description">
+            <a href="project1.html" style="color: #e9be31; text-decoration: none;"><h1>Cube-Race</h1></a>
+            <p>A game made with unity, where you have to slide your way through the obstacles (Only works on devices with keyboards)</p>
+            <p>
+                <span style="font-weight: 500;">Build with: </span>&nbsp; C#, Unity
+            </p><br>
+            <div class="see"><a href="project1.html" style="color: #b854fa; text-decoration: none;"><p>&nbsp;&nbsp;See project&nbsp;&nbsp;</p></a></div>
+        </div>
+
+        <div>
+            <a href="project1.html" style="color: #e9be31; text-decoration: none;"><img src="Images/Game.png" alt="Pic" width="500" height="500" class="game-img"></a>
+        </div>
+    </div>
+
+</div>
 
 
 
