--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
 
         <div class="gif-box">
-            <img class="gif" src="Images/Animation (2).gif" alt="wow">
+            <img class="gif" src="Images/Animation.gif" alt="wow">
         </div>
 
     </div>
@@ -97,7 +97,7 @@
     <div class="project1">
         <div class="description">
             <a href="project1.html" style="color: #e9be31; text-decoration: none;"><h1>Cube-Race</h1></a>
-            <p>A game made with unity, where you have to slide your way through the obstacles (Only works on devices with keyboards)</p>
+            <p>A game made with Unity, where you have to slide your way through the obstacles (Only works on devices with keyboards)</p>
             <p>
                 <span style="font-weight: 500;">Build with: </span>&nbsp; C#, Unity
             </p><br>
@@ -131,7 +131,7 @@
                 </div>
                 
                 <div class="socials">
-                    <a href="https://github.com/JinhoyBoy" target="_blank"><img src="Images/github.png" alt="github" width="64" height="64"></a>
+                    <a href="https://github.com/JinhoyBoy" target="_blank"><img src="Images/Github.png" alt="github" width="64" height="64"></a>
                 </div>
 
                 <div class="socials">
