--- a/project1.html
+++ b/project1.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Cube-Race</title>
-    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="Images/Logo.png">
-    
+    <link rel="stylesheet" href="TemplateData/style.css">
 </head>
-<body class="go-back">
+<body>
 
-    <a href="index.html" style="text-decoration: none;" ><h2>Go back</h2></a>
+    
 
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width=960 height=600></canvas>
@@ -23,9 +22,9 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Cube-race</div>
+        <div id="unity-build-title">Cube-Race</div>
       </div>
-    </div>
+    </div><a href="index.html" style="font-family: 'Lato'; text-decoration: none;" ><h2>&nbsp;&nbsp;&nbsp;Go back</h2></a>
     <script>
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
