--- a/index.html
+++ b/index.html
@@ -113,16 +113,16 @@
 
     <div class="project1">
         <div class="description">
-            <a href="hyperoxide.creator-spring.com" style="color: #6340b6; text-decoration: none;"><h1>Lost. by Cinderella</h1></a>
+            <a href="https://hyperoxide.creator-spring.com/" style="color: #6340b6; text-decoration: none;"><h1>Lost. by Cinderella</h1></a>
             <p>(LBC for short) A merchendise designing project powered by Teespring.</p>
             <p>
                 <span style="font-weight: 500;">Designed with: </span>&nbsp; Procreate, Teespring
             </p><br>
-            <div class="see"><a href="hyperoxide.creator-spring.com" style="color: #6340b6; text-decoration: none;"><p>&nbsp;&nbsp;See project&nbsp;&nbsp;</p></a></div>
+            <div class="see"><a href="https://hyperoxide.creator-spring.com/" style="color: #6340b6; text-decoration: none;"><p>&nbsp;&nbsp;See project&nbsp;&nbsp;</p></a></div>
         </div>
 
         <div>
-            <a href="hyperoxide.creator-spring.com" style="color: #e95631; text-decoration: none;"><img src="Images/LBC.png" alt="Pic" width="500" height="500" class="game-img"></a>
+            <a href="https://hyperoxide.creator-spring.com/" style="color: #e95631; text-decoration: none;"><img src="Images/LBC.png" alt="Pic" width="640" height="500" class="game-img"></a>
         </div>
     </div>
 
