--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
     <div class="project1">
         <div class="description">
-            <a href="https://hyperoxide.creator-spring.com/" style="color: #6340b6; text-decoration: none;"><h1>Lost. by Cinderella</h1></a>
+            <a href="https://hyperoxide.creator-spring.com/" style="color: #6340b6; text-decoration: none;"><h1>Lost by Cinderella</h1></a>
             <p>(LBC for short) A merchendise designing project powered by Teespring.</p>
             <p>
                 <span style="font-weight: 500;">Designed with: </span>&nbsp; Procreate, Teespring
