--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </div>
 
         <div>
-            <a href="https://hyperoxide.creator-spring.com/" style="color: #e95631; text-decoration: none;"><img src="Images/LBC.png" alt="Pic" width="640" height="500" class="game-img"></a>
+            <a href="https://hyperoxide.creator-spring.com/" style="color: #e95631; text-decoration: none;"><img  src="Images/LBC.png" alt="Pic" width="998" height="501" class="LBC"></a>
         </div>
     </div>
 
